tests/failing/2-generic_lambda_generic_type_mismatch/main.rgo
str: @str
exit: @exit
printf: (fmt: str!, args: ..., ok:()) {
    (s: str) = @sprintf(fmt, args)
    @write(s, ok)
}
receiver: <T>(T)
foo: <T>(x: T, ok:receiver<T>){
    ok(x)
}
bar: (x: str){
    printf("%s", x, exit(0))
}
main: () {
    foo(42, bar)
}
